# DBCParser

./: .gitignore  README.md
DBCParser/: CMakeLists.txt
DBCParser/files/: bmw_e9x_e8x.dbc  demo.dbc
DBCParser/src/: dbc_parser.cpp  dbc_parser.h  main.cpp  websocket_client.cpp  websocket_client.h
DBCParser/src/gui/: main_window.cpp  main_window.h  main_window.ui
DBCParser/src/logger/: logger.h
DBCParserServer/: CMakeLists.txt  vcpkg.json
DBCParserServer/src/: main.cpp
DBCParserServer/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
DBCParserServer/src/logger/: QtTextEditSink.h  logger.cpp
DBCParserServer/src/protobuf/: can_frame.proto
DBCParserServer/src/websocketserver/: websocketserver.cpp  websocketserver.h
